Add missing opening <p> tag in rules.html
The <p> tag was missing in the rules.html file, causing a formatting issue.
Added the opening <p> tag to ensure proper display of content.

--- a/information.html
+++ b/information.html
@@ -92,13 +92,13 @@
           </tr>
       </tfoot>
     </table>
-    <p class="parraf"><strong>Facility type:</strong> Outdoor</p>
+    <div id="fonemail">
+      <p class="parraf"><strong>Facility type:</strong> Outdoor.</p>
       <p class="parraf"><strong>Adiotional Information:</strong> If deemed necessary by MDHL, games may me shortened or cancelled due to extreme weather conditions</p>
-      <div id="fonemail">
-        <p class="parraf"><strong>Please Direct all questions to:</strong>Michael Randall, League coordinator</p>
-        <p><strong>Phone:</strong>(630)690-8132</p>
-        <p><strong>Email:</strong><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcRwQZrjqLcXpFLWHkrCTdrNqKBSnDtkfQjSMBRxGKHrMDVdRQZKxCLFrmHkLqKcRnDXstvSJ">michael.randall@chihockey.org</a></p>
-      </div>
+      <p class="parraf"><strong>Please Direct all questions to:</strong>Michael Randall, League coordinator</p>
+      <p><strong>Phone:</strong>(630)690-8132</p>
+      <p><strong>Email:</strong><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcRwQZrjqLcXpFLWHkrCTdrNqKBSnDtkfQjSMBRxGKHrMDVdRQZKxCLFrmHkLqKcRnDXstvSJ">michael.randall@chihockey.org</a></p>
+    </div>
   </div>
 </main>
 <footer>
